<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationActivity"
    android:orientation="vertical">
    <include
        layout="@layout/app_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:textSize="20dp"
        android:textAlignment="center"
        android:background="@android:color/holo_red_light"
        android:visibility="gone"
        android:id="@+id/mandatory"
        android:text="@string/mandatory"/>
    <ImageView
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginLeft="135dp"
        android:src="@drawable/registration"
        android:layout_marginTop="100dp"
        android:background="@android:color/white"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registration"
        android:textSize="26dp"
        android:gravity="center"
        android:textStyle="bold" />
    <!--<EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/uname"
        android:hint="@string/username"/> -->
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/email"
        android:hint="@string/email"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/pwd"
        android:hint="@string/password"/>
    <!--<EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/firstname"
        android:hint="@string/firstname"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lastname"
        android:hint="@string/lastname"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/phone"
        android:inputType="phone"
        android:hint="@string/phone"/>-->
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:background = "@android:color/holo_blue_dark"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:onClick="register"/>
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="20dp"
        android:visibility="gone" />
</LinearLayout>